small performance improvement